--- a/about.html
+++ b/about.html
@@ -52,92 +52,24 @@
 					<header class="major">
 						<h1>About me</h1>
 					</header>
-					<div class="content">
-						<p>IN PROGRESS...<p/>
-					</div>
 				</div>
 			</section>
 
-			<!-- Main -->
-			<div id="main">
+					<div id="main" class="alt">
 
-				<!-- One -->
-				<section id="one">
-					<div class="inner">
-						<header class="major">
-							<h2>Sed amet aliquam</h2>
-						</header>
-						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+						<!-- One -->
+							<section id="one">
+								<div class="inner">
+									<!--<span class="image main"><img src="images/default/pic11.jpg" alt="" /></span>-->
+									<p>Greetings! My name is Joan, a passionate individual in the DevOps and SRE world, with a focus on the containerization of applications using Docker and the construction of pipelines and automated systems.</p>
+									<p>You might be wondering how I developed a love for this aspect of the computing world. It all began when I enrolled at the University of Lleida for the GTIDIC Bachelor's Degree. During my time there, I discovered a generic passion for the IT world and programming. In the final year of the program, one of my favorite subjects was introduced, which changed my passion - System Administration. It was during this course that I was introduced to Docker and Kubernetes. Subsequently, I chose to base my final degree project on this topic, creating a low-cost cluster with Raspberry Pi. Since then, I've continued to enhance my skills through self-study and Udemy courses.</p>
+									<p>In October 2023, I embraced a new challenge and embarked on an adventure in the Down Under country, Australia, with a work and holiday visa. I'm taking a year to explore new horizons and meet some incredible people. Despite this, my commitment to self-learning persists, and I'm making significant strides in the DevOps field while also working on personal projects.</p>
+									<p>If you're interested in my hobbies, I am an avid reader of fantasy books (currently immersed in the great trilogy of LOTR). I also have a deep love for music, enjoying almost all genres with a few exceptions. In terms of sports, I used to play rugby, and my favorite hobby is savoring every moment of life, regardless of what happens.</p>									
+								</div>
+							</section>
+
 					</div>
-				</section>
-
-				<!-- Two -->
-				<section id="two" class="spotlights">
-					<section>
-						<a href="generic.html" class="image">
-							<img src="images/default/pic08.jpg" alt="" data-position="center center" />
-						</a>
-						<div class="content">
-							<div class="inner">
-								<header class="major">
-									<h3>Orci maecenas</h3>
-								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-					<section>
-						<a href="generic.html" class="image">
-							<img src="images/default/pic09.jpg" alt="" data-position="top center" />
-						</a>
-						<div class="content">
-							<div class="inner">
-								<header class="major">
-									<h3>Rhoncus magna</h3>
-								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-					<section>
-						<a href="generic.html" class="image">
-							<img src="images/default/pic10.jpg" alt="" data-position="25% 25%" />
-						</a>
-						<div class="content">
-							<div class="inner">
-								<header class="major">
-									<h3>Sed nunc ligula</h3>
-								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-				</section>
-
-				<!-- Three -->
-				<section id="three">
-					<div class="inner">
-						<header class="major">
-							<h2>Massa libero</h2>
-						</header>
-						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-						<ul class="actions">
-							<li><a href="generic.html" class="button next">Get Started</a></li>
-						</ul>
-					</div>
-				</section>
-
-			</div>
-
+			
 			<!-- Contact -->
 			<section id="contact">
 				<div class="inner">
