Deleted documents folder -> Link to drive, and added Ansible certificate

--- a/education.html
+++ b/education.html
@@ -38,7 +38,7 @@
 					<li><a href="about.html">About me</a></li>
 				</ul>
 				<ul class="actions stacked">
-					<li><a href="documents/RESUME_DEVOPS_JOAN.pdf" target="_blank" class="button primary fit">Get my resume</a></li>
+					<li><a href="https://drive.proton.me/urls/ENR1PNCX9R#mFK4sQAEXdqY" target="_blank" class="button primary fit">Get my resume</a></li>
 				</ul>
 			</nav>
 
@@ -95,6 +95,23 @@
 				<section id="forth" class="spotlights">
 					<section>
 						<a class="image">
+							<img src="images/education/Ansible.jpg" alt="" data-position="top center" />
+						</a>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h3>Ansible for the Absolute Beginner</h3>
+									<h4>Udemy</h4>
+								</header>
+								<p>Automation is a big part of a DevOps Engineer, with this Ansible course I understand the basics to start automating projects with the tool.</p>
+								<ul class="actions">
+									<li><a href="https://drive.proton.me/urls/N0WPH412AC#2ymxAMGr0h2H" target="_blank" class="button">View certificate</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+					<section>
+						<a class="image">
 							<img src="images/education/DevOps.jpg" alt="" data-position="center center" />
 						</a>
 						<div class="content">
@@ -105,7 +122,7 @@
 								</header>
 								<p>Through this course, I delved into the essentials of DevOps, gaining insights into key tools and methodologies such as Docker, Kubernetes, Jenkins, Grafana, and Git.</p>
 								<ul class="actions">
-									<li><a href="documents/CERT_UDEMY_DEVOPS.pdf" target="_blank" class="button">View certificate</a></li>
+									<li><a href="https://drive.proton.me/urls/CDPR0M5CKW#28PNfoVv1TLJ" target="_blank" class="button">View certificate</a></li>
 								</ul>
 							</div>
 						</div>
@@ -122,7 +139,7 @@
 								</header>
 								<p>True to its name, the course provided a comprehensive exploration of Docker, covering essential aspects of the technology such as Dockerfile, Docker Compose, Networks, and Images.</p>
 								<ul class="actions">
-									<li><a href="documents/CERT_UDEMY_DOCKER.pdf" target="_blank" class="button">View certificate</a></li>
+									<li><a href="https://drive.proton.me/urls/VXM449S6Z8#jfffYZUXDRwm" target="_blank" class="button">View certificate</a></li>
 								</ul>
 							</div>
 						</div>
@@ -139,7 +156,7 @@
 								</header>
 								<p>The C course provided me with a thorough understanding of the C programming language, allowing me to delve deeply into its intricacies and gain a comprehensive grasp of working with it.</p>
 								<ul class="actions">
-									<li><a href="documents/CERT_UDEMY_C-BOOTCAMP.pdf" target="_blank" class="button">View certificate</a></li>
+									<li><a href="https://drive.proton.me/urls/KQH1FKAH2C#UQcLl6ZjdS71" target="_blank" class="button">View certificate</a></li>
 								</ul>
 							</div>
 						</div>
@@ -154,7 +171,6 @@
 						<ul>
 							<li>AWS Cloud Practitioner certificate - AWS Training</li>
 							<li>Kubernetes for the absolute beginer - Udemy</li>
-							<li>Ansible for the absolute beginer - Udemy</li>
 						</ul>
 					</div>
 				</section>
