--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<li><a href="about.html">About me</a></li>
 				</ul>
 				<ul class="actions stacked">
-					<li><a href="documents/RESUME_DEVOPS_JOAN.pdf" target="_blank" class="button primary fit">Get my resume</a></li>
+					<li><a href="https://drive.proton.me/urls/ENR1PNCX9R#mFK4sQAEXdqY" target="_blank" class="button primary fit">Get my resume</a></li>
 				</ul>
 			</nav>
 
@@ -113,7 +113,7 @@
 							<img src="images/default/pic01.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h3><a href="documents/RESUME_DEVOPS_JOAN.pdf" class="link"><i class="fa fa-paperclip"></i>  Resume</a></h3>
+							<h3><a href="https://drive.proton.me/urls/ENR1PNCX9R#mFK4sQAEXdqY" class="link"><i class="fa fa-paperclip"></i>  Resume</a></h3>
 							<p>Click here if you want to get my resume</p>
 						</header>
 					</article>
