--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
 					<li><a href="about.html">About me</a></li>
 				</ul>
 				<ul class="actions stacked">
-					<li><a href="documents/RESUME_DEVOPS_JOAN.pdf" target="_blank" class="button primary fit">Get my resume</a></li>
+					<li><a href="https://drive.proton.me/urls/ENR1PNCX9R#mFK4sQAEXdqY" target="_blank" class="button primary fit">Get my resume</a></li>
 				</ul>
 			</nav>
 
