--- a/experience.html
+++ b/experience.html
@@ -71,7 +71,7 @@
 								<header class="major">
 									<h3>MPM Software</h3>
 								</header>
-								<h4>Sep. 2021 - Aug. 2023</h4>
+								<h4>Sep. 2021 - Present</h4>
 								<p>.NET Developer</p>
 								<p>Developed and maintained .NET web applications for insurance companies, as well as help the DevOps team to improve the system.</p>
 								<ul class="actions">
