--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 							<img src="images/default/pic01.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h3><a href="https://drive.proton.me/urls/ENR1PNCX9R#mFK4sQAEXdqY" class="link"><i class="fa fa-paperclip"></i>  Resume</a></h3>
+							<h3><a href="https://drive.proton.me/urls/WDMF4ZTK9W#8ODuFRAvK7wx" class="link"><i class="fa fa-paperclip"></i>  Resume</a></h3>
 							<p>Click here if you want to get my resume</p>
 						</header>
 					</article>
